# sentinel

./: .env.example  .envrc  .github-integration-summary.md  .gitignore  .mcp.json  .nix-integration-summary.md  .sops.yaml  CHANGELOG.md  CLAUDE.md  DEMO.md  FLAKE_USAGE.md  Makefile  NEOLAND-PLATFORM.md  NIX_FLAKE_GUIDE.md  README.md  ROADMAP.md  SHOWCASE.md  conftest.py  docker-compose.infra.yml  docker-compose.test.yml  docker-compose.unified.yml  docker-compose.yml  flake.development.nix  flake.nix  pyproject.toml  requirements.txt  run_comprehensive_test.sh  test_cerebro_integration.sh  test_comprehensive_integration.py  test_judge_endpoint.sh  test_neutron_integration.sh  test_phantom_connection.sh  test_runtime.py
.github/: CODEOWNERS  branch-protection.md  pull_request_template.md
.github/scripts/: materialize-release-workspace.sh  materialize-sentinel-workspace.sh  materialize-umbrella.sh
.github/workflows/: ci.yml  integration-tests.yml  operational-gates.yml  (+1 more)
announcements/: templates.md
azure-ml/: azure-nix-template.sh  azure-vm.nix
chaos/: test_nats_reconnect.py  test_partial_boot.py  test_phantom_degraded.py
docs/: go-live-goals.md
mocks/: mock_ai_agent.py
performance/: test_phantom_latency.py  test_spooknix_latency.py  test_throughput.py
scenarios/: test_ai_agent_e2e.py  test_cortex_e2e.py  test_ml_pipeline_e2e.py  test_nats_auth.py  test_neoland_e2e.py  test_observability_e2e.py  test_phantom_e2e.py  test_phantom_soc_e2e.py  test_securellm_e2e.py  test_spectre_e2e.py
scripts/: backup-config-git.sh  backup-postgres.sh  batch-3-security-check.sh  batch-4-alerting-check.sh  batch-4-logging-check.sh  batch-4-metrics-check.sh  batch-5-recovery-check.sh  batch-6-go-no-go-check.sh  gate-5-secrets-check.sh  init-jetstream.sh  reload-nats-keys.sh  restore-postgres.sh  rotate-nkeys.sh  rotate-tls.sh  smoke-test.sh
secrets/: .gitignore  nkeys.env.enc  runtime.env.enc
(+35 files in other folders)
