[tool.poetry]
name = "integration-tests"
version = "1.0.0"
description = "Comprehensive Integration Tests - Neutron + Cerebro + Spectre + Phantom"
authors = ["VoidNxSEC Team"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.13"
# Testing Framework
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-timeout = "^2.1.0"
pytest-xdist = "^3.3.0"  # Parallel test execution

# HTTP Client
httpx = "^0.24.1"

# Event Bus (Optional - Scenario 9)
nats-py = { version = "^2.3.0", optional = true }

# Performance & Monitoring
psutil = "^5.9.0"

# Data Validation
pydantic = "^2.0.0"

# Utilities
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"  # Linting
black = "^23.0.0"  # Formatting

[tool.poetry.extras]
nats = ["nats-py"]  # Install with: poetry install -E nats

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "chaos: marks tests that involve failure injection",
    "performance: marks tests that measure performance",
    "compliance: marks tests that validate compliance requirements",
    "e2e: marks end-to-end integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.black]
line-length = 100
target-version = ['py313']
